Updated config to export to es6 to avoid the necessity of having to use yet another library(tm) and included extra information into the readme to account for this change.

--- a/Project Sylveon/TypeScript/tsconfig.json
+++ b/Project Sylveon/TypeScript/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions":
     {
         "rootDir": "",
-        "outDir": "../wwwroot/ts"
+        "outDir": "../wwwroot/ts",
+        "target": "ES6"
     }
 }
