--- a/Project Sylveon/FrontEnd.csproj
+++ b/Project Sylveon/FrontEnd.csproj
@@ -5,8 +5,11 @@
     <RootNamespace>Project_Sylveon</RootNamespace>
   </PropertyGroup>
 
-
   <ItemGroup>
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.7.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
