--- a/Project Sylveon (React)/Project Sylveon (React).csproj
+++ b/Project Sylveon (React)/Project Sylveon (React).csproj
@@ -21,6 +21,10 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="..\Project Sylveon %2528React%2529\ClientApp\Example\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
