--- a/Project Sylveon/FrontEnd.csproj
+++ b/Project Sylveon/FrontEnd.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RootNamespace>Project_Sylveon</RootNamespace>
+    <RootNamespace>FrontEnd (old)</RootNamespace>
+    <AssemblyName>FrontEnd (old)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
