--- a/React Frontend/React Frontend.csproj
+++ b/React Frontend/React Frontend.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ClientApp\img\" />
+    <ProjectReference Include="..\BackEnd\BackEnd.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
