Styling for statistics

--- a/React Frontend/React Frontend.csproj
+++ b/React Frontend/React Frontend.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\components\Statistics.js" />
+    <None Remove="ClientApp\src\css\Statistics.ts" />
   </ItemGroup>
 
   <ItemGroup>
