--- a/React Frontend/Properties/launchSettings.json
+++ b/React Frontend/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "React_Frontend": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://*:5001;http://*:5000",
+      "applicationUrl": "https://0:0:0:0:5001;http://0:0:0:0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
