--- a/React Frontend/ClientApp/package.json
+++ b/React Frontend/ClientApp/package.json
@@ -8,6 +8,7 @@
     "merge": "^1.2.1",
     "oidc-client": "^1.10.1",
     "react": "^16.12.0",
+    "react-blockly": "^5.0.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-bootstrap": "^0.24.4",
