--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -1,20 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0"/>
+    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0"/>
+    <PackageReference Include="MSTest.TestFramework" Version="1.4.0"/>
+    <PackageReference Include="coverlet.collector" Version="1.0.1"/>
+    <PackageReference Include="MongoDB.Entities" Version="11.3.5"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\BackEnd\BackEnd.csproj" />
+    <ProjectReference Include="..\BackEnd\BackEnd.csproj"/>
   </ItemGroup>
-
 </Project>
