--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0"/>
     <PackageReference Include="coverlet.collector" Version="1.0.1"/>
     <PackageReference Include="MongoDB.Entities" Version="11.3.5"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BackEnd\BackEnd.csproj"/>
